imgcodecs: support transforming with icc profile
- add IMREAD_IGNORE_TRANSFORM_ICC
- extracta embedded icc profile in jpeg and png

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -345,6 +345,9 @@ OCV_OPTION(WITH_SPNG "Include SPNG support" OFF
 OCV_OPTION(WITH_GDCM "Include DICOM support" OFF
   VISIBLE_IF TRUE
   VERIFY HAVE_GDCM)
+OCV_OPTION(WITH_LCMS2 "With LCMS2" ON
+  VISIBLE_IF NOT WINRT
+  VERIFY HAVE_LCMS2)
 OCV_OPTION(WITH_PVAPI "Include Prosilica GigE support" OFF
   VISIBLE_IF NOT ANDROID AND NOT IOS AND NOT WINRT
   VERIFY HAVE_PVAPI)
@@ -1449,6 +1452,10 @@ endif()
 
 if(WITH_IMGCODEC_PFM OR DEFINED HAVE_IMGCODEC_PFM)
   status("    PFM:" HAVE_IMGCODEC_PFM THEN "YES" ELSE "NO")
+endif()
+
+if(WITH_LCMS2 OR HAVE_LCMS2)
+  status("    LCMS2:" LCMS2_FOUND THEN "${LCMS2_LIBRARIES} (ver ${LCMS2_VERSION})" ELSE "NO")
 endif()
 
 # ========================== VIDEO IO ==========================
